--- a/Vocable/Common/Views/ToastView.xib
+++ b/Vocable/Common/Views/ToastView.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,46 +11,72 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yiJ-Tr-Jim" userLabel="ToastView" customClass="ToastView" customModule="Vocable" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="387" height="108"/>
+            <rect key="frame" x="0.0" y="0.0" width="451" height="205"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="750" text="Saved to My Sayings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fEx-Zh-S4e">
-                    <rect key="frame" x="32" y="16" width="323" height="76"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
-                    <color key="textColor" name="DefaultFontColor"/>
-                    <nil key="highlightedColor"/>
-                    <variation key="widthClass=compact">
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
-                    </variation>
-                </label>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6o7-c4-Q9C">
+                    <rect key="frame" x="0.0" y="0.0" width="451" height="205"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="FnF-1G-0bh">
+                        <rect key="frame" x="0.0" y="0.0" width="451" height="205"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="QaH-Bg-RM9">
+                                <rect key="frame" x="62.5" y="45" width="326.5" height="115"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="P6c-SV-8Wb">
+                                        <rect key="frame" x="139.5" y="3.5" width="47" height="44"/>
+                                        <color key="tintColor" name="DefaultFontColor"/>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="41" weight="bold"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="750" text="Saved to My Sayings" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEx-Zh-S4e">
+                                        <rect key="frame" x="0.0" y="74" width="326.5" height="41"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
+                                        <color key="textColor" name="DefaultFontColor"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="heightClass=compact">
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                        </variation>
+                                        <variation key="widthClass=compact">
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                        </variation>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="QaH-Bg-RM9" secondAttribute="bottom" constant="45" id="GZL-1c-IuY"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="QaH-Bg-RM9" secondAttribute="trailing" constant="20" id="K74-LG-PVG"/>
+                            <constraint firstItem="QaH-Bg-RM9" firstAttribute="centerX" secondItem="FnF-1G-0bh" secondAttribute="centerX" id="Mt7-aU-2wG"/>
+                            <constraint firstItem="QaH-Bg-RM9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="FnF-1G-0bh" secondAttribute="leading" constant="20" id="SYI-gc-ijH"/>
+                            <constraint firstItem="QaH-Bg-RM9" firstAttribute="top" secondItem="FnF-1G-0bh" secondAttribute="top" constant="45" id="g5Q-aF-rMC"/>
+                        </constraints>
+                    </view>
+                    <blurEffect style="systemUltraThinMaterialDark"/>
+                </visualEffectView>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <accessibility key="accessibilityConfiguration" identifier="ToastView"/>
             <constraints>
-                <constraint firstAttribute="trailingMargin" secondItem="fEx-Zh-S4e" secondAttribute="trailing" id="GWB-Ur-efQ"/>
-                <constraint firstItem="fEx-Zh-S4e" firstAttribute="top" secondItem="yiJ-Tr-Jim" secondAttribute="topMargin" id="U0j-0K-NGR"/>
-                <constraint firstItem="fEx-Zh-S4e" firstAttribute="leading" secondItem="yiJ-Tr-Jim" secondAttribute="leadingMargin" id="eSP-vo-rwj"/>
-                <constraint firstAttribute="bottomMargin" secondItem="fEx-Zh-S4e" secondAttribute="bottom" id="jqx-on-aBa"/>
+                <constraint firstAttribute="trailing" secondItem="6o7-c4-Q9C" secondAttribute="trailing" id="Gz5-RM-xkm"/>
+                <constraint firstItem="6o7-c4-Q9C" firstAttribute="leading" secondItem="yiJ-Tr-Jim" secondAttribute="leading" id="OOC-d2-HmL"/>
+                <constraint firstAttribute="bottom" secondItem="6o7-c4-Q9C" secondAttribute="bottom" id="Xc6-Il-Svk"/>
+                <constraint firstItem="6o7-c4-Q9C" firstAttribute="top" secondItem="yiJ-Tr-Jim" secondAttribute="top" id="YPC-Bb-fn2"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <edgeInsets key="layoutMargins" top="28" left="48" bottom="28" right="48"/>
-            <userDefinedRuntimeAttributes>
-                <userDefinedRuntimeAttribute type="color" keyPath="fillColor">
-                    <color key="value" red="0.12549019610000001" green="0.10980392160000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                </userDefinedRuntimeAttribute>
-            </userDefinedRuntimeAttributes>
             <variation key="widthClass=compact">
                 <edgeInsets key="layoutMargins" top="16" left="32" bottom="16" right="32"/>
             </variation>
             <connections>
+                <outlet property="iconView" destination="P6c-SV-8Wb" id="B0m-3L-7T4"/>
                 <outlet property="titleLabel" destination="fEx-Zh-S4e" id="JWw-AS-4Jo"/>
             </connections>
-            <point key="canvasLocation" x="313.768115942029" y="110.49107142857143"/>
+            <point key="canvasLocation" x="165.94202898550725" y="134.26339285714286"/>
         </view>
     </objects>
     <resources>
+        <image name="checkmark" catalog="system" width="128" height="114"/>
         <namedColor name="DefaultFontColor">
             <color red="0.81599998474121094" green="0.93199998140335083" blue="0.91299998760223389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
