--- a/Vocable/Common/Views/ToastView.xib
+++ b/Vocable/Common/Views/ToastView.xib
@@ -11,55 +11,72 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yiJ-Tr-Jim" userLabel="ToastView" customClass="ToastView" customModule="Vocable" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="451" height="205"/>
+            <rect key="frame" x="0.0" y="0.0" width="516" height="277"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6o7-c4-Q9C">
-                    <rect key="frame" x="0.0" y="0.0" width="451" height="205"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="FnF-1G-0bh">
-                        <rect key="frame" x="0.0" y="0.0" width="451" height="205"/>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cEE-Xk-FQp">
+                    <rect key="frame" x="0.0" y="0.0" width="516" height="277"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bv8-xY-Cf7">
+                        <rect key="frame" x="0.0" y="0.0" width="516" height="277"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="QaH-Bg-RM9">
-                                <rect key="frame" x="62.5" y="45" width="326.5" height="115"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="P6c-SV-8Wb">
-                                        <rect key="frame" x="139.5" y="3.5" width="47" height="44"/>
-                                        <color key="tintColor" name="DefaultFontColor"/>
-                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="41" weight="bold"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="750" text="Saved to My Sayings" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEx-Zh-S4e">
-                                        <rect key="frame" x="0.0" y="74" width="326.5" height="41"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
-                                        <color key="textColor" name="DefaultFontColor"/>
-                                        <nil key="highlightedColor"/>
-                                        <variation key="heightClass=compact">
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
-                                        </variation>
-                                        <variation key="widthClass=compact">
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
-                                        </variation>
-                                    </label>
-                                </subviews>
-                            </stackView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X50-j0-cP3">
+                                <rect key="frame" x="0.0" y="0.0" width="516" height="277"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="7vX-tI-ZLi">
+                                    <rect key="frame" x="0.0" y="0.0" width="516" height="277"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="QaH-Bg-RM9">
+                                            <rect key="frame" x="45" y="45" width="426" height="187"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="P6c-SV-8Wb">
+                                                    <rect key="frame" x="189.5" y="3.5" width="47" height="116"/>
+                                                    <color key="tintColor" name="DefaultFontColor"/>
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="41" weight="bold"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="750" text="Saved to My Sayings" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEx-Zh-S4e">
+                                                    <rect key="frame" x="50" y="146" width="326.5" height="41"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
+                                                    <color key="textColor" name="DefaultFontColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="heightClass=compact">
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                                    </variation>
+                                                    <variation key="widthClass=compact">
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                                    </variation>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="QaH-Bg-RM9" secondAttribute="trailing" constant="45" id="DOG-fr-DQZ"/>
+                                        <constraint firstItem="QaH-Bg-RM9" firstAttribute="leading" secondItem="7vX-tI-ZLi" secondAttribute="leading" constant="45" id="aJR-yl-3zi"/>
+                                        <constraint firstAttribute="bottom" secondItem="QaH-Bg-RM9" secondAttribute="bottom" constant="45" id="lkV-9V-u6w"/>
+                                        <constraint firstItem="QaH-Bg-RM9" firstAttribute="top" secondItem="7vX-tI-ZLi" secondAttribute="top" constant="45" id="y0k-15-zJn"/>
+                                    </constraints>
+                                </view>
+                                <vibrancyEffect>
+                                    <blurEffect style="prominent"/>
+                                </vibrancyEffect>
+                            </visualEffectView>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="QaH-Bg-RM9" secondAttribute="bottom" constant="45" id="GZL-1c-IuY"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="QaH-Bg-RM9" secondAttribute="trailing" constant="20" id="K74-LG-PVG"/>
-                            <constraint firstItem="QaH-Bg-RM9" firstAttribute="centerX" secondItem="FnF-1G-0bh" secondAttribute="centerX" id="Mt7-aU-2wG"/>
-                            <constraint firstItem="QaH-Bg-RM9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="FnF-1G-0bh" secondAttribute="leading" constant="20" id="SYI-gc-ijH"/>
-                            <constraint firstItem="QaH-Bg-RM9" firstAttribute="top" secondItem="FnF-1G-0bh" secondAttribute="top" constant="45" id="g5Q-aF-rMC"/>
+                            <constraint firstItem="X50-j0-cP3" firstAttribute="top" secondItem="bv8-xY-Cf7" secondAttribute="top" id="bml-hd-eKd"/>
+                            <constraint firstItem="X50-j0-cP3" firstAttribute="leading" secondItem="bv8-xY-Cf7" secondAttribute="leading" id="fKF-5O-TED"/>
+                            <constraint firstAttribute="trailing" secondItem="X50-j0-cP3" secondAttribute="trailing" id="jNe-WD-NOa"/>
+                            <constraint firstAttribute="bottom" secondItem="X50-j0-cP3" secondAttribute="bottom" id="qY6-qj-5AK"/>
                         </constraints>
                     </view>
-                    <blurEffect style="systemUltraThinMaterialDark"/>
+                    <blurEffect style="systemThinMaterialLight"/>
                 </visualEffectView>
             </subviews>
             <accessibility key="accessibilityConfiguration" identifier="ToastView"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="6o7-c4-Q9C" secondAttribute="trailing" id="Gz5-RM-xkm"/>
-                <constraint firstItem="6o7-c4-Q9C" firstAttribute="leading" secondItem="yiJ-Tr-Jim" secondAttribute="leading" id="OOC-d2-HmL"/>
-                <constraint firstAttribute="bottom" secondItem="6o7-c4-Q9C" secondAttribute="bottom" id="Xc6-Il-Svk"/>
-                <constraint firstItem="6o7-c4-Q9C" firstAttribute="top" secondItem="yiJ-Tr-Jim" secondAttribute="top" id="YPC-Bb-fn2"/>
+                <constraint firstAttribute="trailing" secondItem="cEE-Xk-FQp" secondAttribute="trailing" id="1NA-c5-U6Z"/>
+                <constraint firstItem="cEE-Xk-FQp" firstAttribute="leading" secondItem="yiJ-Tr-Jim" secondAttribute="leading" id="N1n-i8-TRC"/>
+                <constraint firstAttribute="bottom" secondItem="cEE-Xk-FQp" secondAttribute="bottom" id="lxF-sq-TCM"/>
+                <constraint firstItem="cEE-Xk-FQp" firstAttribute="top" secondItem="yiJ-Tr-Jim" secondAttribute="top" id="pYu-Mg-Qc6"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
@@ -72,7 +89,7 @@
                 <outlet property="iconView" destination="P6c-SV-8Wb" id="B0m-3L-7T4"/>
                 <outlet property="titleLabel" destination="fEx-Zh-S4e" id="JWw-AS-4Jo"/>
             </connections>
-            <point key="canvasLocation" x="165.94202898550725" y="134.26339285714286"/>
+            <point key="canvasLocation" x="211.59420289855075" y="158.37053571428569"/>
         </view>
     </objects>
     <resources>
